# anki-syncer

./: .gitmodules
syncer/: Cargo.toml
syncer/src/: main.rs
