[package]
name = "anki-syncer"
license = "AGPL-3.0-or-later"
version = "0.1.0"
edition = "2021"

[dependencies]
anki = { path = "../anki/rslib" }
tokio = { version = "1.23.1", features = ["macros"] }
reqwest = { version = "0.11.3", features = ["rustls-tls"] }

[profile.release]
lto = "thin"
codegen-units = 1
